--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.383.0",
     "@aws-sdk/s3-request-presigner": "^3.383.0",
-    "@mediapipe/camera_utils": "^0.3.1640029074",
-    "@mediapipe/control_utils": "^0.6.1629159505",
-    "@mediapipe/drawing_utils": "^0.3.1620248257",
-    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@preact/signals": "^1.1.3",
+    "axios": ">=1.6.0",
     "buffer": "^6.0.3",
     "bullmq": "^4.6.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
     "esbuild": "^0.18.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
@@ -29,7 +25,6 @@
     "less-watch-compiler": "^1.16.3",
     "marked": "^4.0.6",
     "npm": "^10.2.4",
-    "openai": "^3.3.0",
     "pg": "^8.11.0",
     "postgres": "^3.3.5",
     "postgres-migrations": "^5.3.0",
@@ -39,9 +34,7 @@
     "preact-render-to-string": "^6.1.0",
     "preact-router": "^4.1.2",
     "stable-hash": "^0.0.3",
-    "three": "^0.156.1",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "yeahjs": "^0.3.0"
+    "ts-node-dev": "^2.0.0"
   }
 }
